--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">TestCarePlus</string>
-    <string name="open_nav">Open TestCarePlus</string>
-    <string name="close_nav">Close TestCarePlus</string>
+    <string name="app_name">CarePlus</string>
+    <string name="open_nav">Open CarePlus</string>
+    <string name="close_nav">Close CarePlus</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="priority_array">
